# python-to-docker-demo

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: docker.yml
exercise-1/: README.md
exercise-2/: README.md
src/python_flask_demo/: __init__.py  __main__.py
