[project]
name = "python-flask-demo"
version = "0.1.0"
description = "Flask Hello World Demo for Docker"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
]

[project.scripts]
flask-demo = "python_flask_demo:main"

[tool.hatch.build.targets.wheel]
packages = ["src/python_flask_demo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
